dev + fix: Added capability of adding team's owners admin permissions against access microservice. Updated docs and devbox is configured

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,4 @@ DB_MAX_CONNECTIONS=
 DB_MAX_IDLE_CONNECTIONS=
 DB_MAX_LIFETIME_CONNECTIONS=
 
-# Redis settings:
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASSWORD=
-REDIS_DB_NUMBER=
+ACCESS_CONNECTOR_URL=
